# Step1toLife

./: .gitignore  .gitkeep  CMakeLists.txt  README.md  build.sh  main.cpp
cmake/: Findnlohmann_json.cmake  Findraylib.cmake
header/: Block.hpp  Chunk.hpp  Chunkmap.hpp  Game.hpp  Inputs.hpp  Window.hpp  button.hpp  camera.hpp  inventory.hpp  menu.hpp
ressources/: block.json
source/: Block.cpp  Chunk.cpp  Chunkmap.cpp  Game.cpp  Inputs.cpp  Window.cpp  button.cpp  inventory.cpp  menu.cpp  rlFPcamera.cpp
